Fix item card text overflow

--- a/public/styles.css
+++ b/public/styles.css
@@ -206,17 +206,26 @@ h4 {
 
 .item img {
   background-color: white;
-  height: 250px;
   margin-top: 4px;
+  min-height: 250px;
   object-fit: contain;
 }
 
 .item-info {
   display: flex;
   flex-direction: column;
-  gap: 20px;
+  gap: 0px;
+  height: 100%;
   justify-content: space-between;
   padding: 10px;
+}
+
+.item-info p {
+  display: -webkit-box;
+  overflow: hidden;
+  -webkit-line-clamp: 3;
+  line-clamp: 3;
+  -webkit-box-orient: vertical;
 }
 
 .item-info-lower {
